--- a/drawingsPage/drawings.html
+++ b/drawingsPage/drawings.html
@@ -14,10 +14,25 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="drawings.css">
 <link rel="stylesheet" type="text/css" href="../style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="drawings.js"></script>
 
 </head>
 <body>
 
+<!--Picture Viewer-->
+<div id="picViewer" class="overlay">
+	<!--Close button-->
+	<a title="close" id="closeButton" onclick="closeViewer()" href="javascript:void(0)">&times;</a>
+	<br>
+	<!--Image that is being viewed-->
+	<div class="overlay-content">
+		<img id="viewedImage" src="">
+	</div>
+</div>
+
+
+<div id="pageBody">
 <!--Name of Website (clickable)-->
 <a href="../index.html" style="text-decoration: none;">
 	<h1 class="webname">Gerry's Artwork</h1>
@@ -41,14 +56,13 @@
 			<h1>Filter</h1>
 		</div>
 		<div class="radios">
-			<label><input type="radio" onclick="getType()" name="type" value="all" checked> All</label><br>
+		<label><input type="radio" onclick="getType()" name="type" value="all" checked> All</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="oil"> Oil</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="pencil"> Pencil</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="pen"> Pen</label><br>
     </div>
 	</div>
 </div>
-
 
 <!--Drawings-->
 <div class="oil all">
@@ -57,7 +71,7 @@
 			<div class="title">
 				<h1>Kitty</h1>
 			</div>
-			<a onclick="" href="#">
+			<a onclick="openViewer('../slideshow/slide5.jpg')" href="#">
 				<img src="thumbnails/kitty.jpg" alt="Kitty" width="230" height="230">
 			</a>
 			<div class="description">
@@ -68,6 +82,7 @@
 	</div>
 </div>
 
+</div>
 <script type="text/javascript" src="../menu.js"></script>
 </body>
 </html>
