Added about page.  Added two more drawings

--- a/drawingsPage/drawings.html
+++ b/drawingsPage/drawings.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 
@@ -52,8 +51,8 @@
 <!--Filter-->
 <div class="responsive">
 	<div class="img">
-		<div class="title">
-			<h1>Filter</h1>
+		<div class="title" style="font-size: 35px">
+			<p>Filter</p>
 		</div>
 		<div class="radios">
 		<label><input type="radio" onclick="getType()" name="type" value="all" checked> All</label><br>
@@ -64,14 +63,14 @@
 	</div>
 </div>
 
-<!--Drawings-->
+<!--DRAWINGS-->
 <div class="oil all">
 	<div class="responsive">
 		<div class="img">
 			<div class="title">
-				<h1>Kitty</h1>
+				<p>Kitty in Trouble</p>
 			</div>
-			<a onclick="openViewer('../slideshow/slide5.jpg')" href="#">
+			<a onclick="openViewer('../slideshow/slide5.jpg')">
 				<img src="thumbnails/kitty.jpg" alt="Kitty" width="230" height="230">
 			</a>
 			<div class="description">
@@ -81,6 +80,39 @@
 		</div>
 	</div>
 </div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="img">
+			<div class="title">
+				<p>Romeo and Juliet</p>
+			</div>
+			<a onclick="openViewer('../slideshow/slide2.jpg')">
+				<img src="thumbnails/dancers.jpg" alt="Kitty" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>Xcm &times; Ycm</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="pencil all">
+	<div class="responsive">
+		<div class="img">
+			<div class="title">
+				<p>A Good Lesson</p>
+			</div>
+			<a onclick="openViewer('../slideshow/slide6.jpg')">
+				<img src="thumbnails/lesson.jpg" alt="Kitty" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>Xcm &times; Ycm</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!--END DRAWINGS-->
 
 </div>
 <script type="text/javascript" src="../menu.js"></script>
