Fixed catagory name for 'A Good Lesson'

--- a/drawingsPage/drawings.html
+++ b/drawingsPage/drawings.html
@@ -106,7 +106,7 @@
 				<img src="thumbnails/lesson.jpg" alt="Kitty" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Oil</p>
+				<p>Pencil</p>
 				<p>Xcm &times; Ycm</p>
 			</div>
 		</div>
