Added contact page

--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -25,8 +25,8 @@
 <ul class="topnav" id="topNav">
 	<li><a href="../index.html">Home</a></li>
 	<li><a href="../drawingsPage/drawings.html">Drawings</a></li>
-	<li><a class="active" href="#">About</a></li>
-	<li><a href="../contactPage/contact.html">Contact</a></li>
+	<li><a href="../aboutPage/about.html">About</a></li>
+	<li><a class="active" href="#">Contact</a></li>
 	<li class="menu">
 		<!--Hamburger menu icon appears when screen gets smaller-->
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
