--- a/drawingsPage/drawings.html
+++ b/drawingsPage/drawings.html
@@ -22,7 +22,7 @@
 <!--Picture Viewer-->
 <div id="picViewer" class="overlay">
 	<!--Close button-->
-	<a title="close" id="closeButton" onclick="closeViewer()" href="javascript:void(0)">&times;</a>
+	<a title="Close" id="closeButton" onclick="closeViewer()" href="javascript:void(0)">&times;</a>
 	<br>
 	<!--Image that is being viewed-->
 	<div class="overlay-content">
@@ -42,6 +42,7 @@
 	<li><a href="../index.html">Home</a></li>
 	<li><a class="active" href="#">Drawings</a></li>
 	<li><a href="../aboutPage/about.html">About</a></li>
+	<li><a href="../contactPage/contact.html">Contact</a></li>
 	<li class="menu">
 		<!--Hamburger menu icon appears when screen gets smaller-->
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
