--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<li><a class="active" href="#">Home</a></li>
 	<li><a href="drawingsPage/drawings.html">Drawings</a></li>
 	<li><a href="aboutPage/about.html">About</a></li>
+	<li><a href="contactPage/contact.html">Contact</a></li>
 	<li class="menu">
 		<!--Hamburger menu icon appears when screen gets smaller-->
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
@@ -37,8 +38,8 @@
 <div class="slideshow">
 	<img id="slide" src="" alt="Drawing">
 	<div class="btn-group">
-		<button class="fa fa-arrow-left" type="button" title="Previous" onclick="previousSlide()"></button>
-		<button class="fa fa-arrow-right" type="button" title="Next" onclick="nextSlide()"></button>
+		<button class="fa fa-arrow-left" title="Previous" type="button" onclick="previousSlide()"></button>
+		<button class="fa fa-arrow-right" title="Next" type="button" onclick="nextSlide()"></button>
 	</div>
 </div>
 
