Added About the Artist

--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -9,9 +9,10 @@
 
 <!--References-->
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Mada" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="about.css">
 
 </head>
 <body>
@@ -32,6 +33,11 @@
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
 	</li>
 </ul>
+
+<div class="panel">
+	<h1>About the Artist: Gerry Minor</h1>
+	<p>I was fortunate in being raised in a family where creativity was valued and encouraged. However, on the downside was the fact that these were the Depression years of the 1930s and 1940s. My father was talented as both a musician and artist and lessons and personal instruction were close at hand. The fun of drawing is one of my earliest memories using pencils, crayons, or watercolors. To be able to draw what I might imagine or see held my attention longer than anything else. It fascinated me how God created human brings with the ability to coordinate the mind, eyes, and hands to work together in harmony. In school, I always looked forward to the free-time given for art. The arts were included in the school curriculum for my community of Whittier, CA. I dreamed of perusing an art career with an emphasis on portraits. When this became known I was told it would not be a wise choice for a career unless I taught art in the schools. The hard times of my generation called for more practical careers, so I had a double major in commercial subjects preparing me for secretarial work. In college I met a returning WW2 navy veteran pursuing his education on the GI Bill. At that time, my life took a dramatic turn. Within the year we were married with UCLA as our destination. I worked on campus until he received his BA degree and secondary teaching credential in instrumental music. This led to a successful high school career and later a professorship in music at university level. My art has been a hobby rather than a vocation since I have been kept quite busy with a family of six children. When our youngest daughter entered school, I continued with my art by taking lessons in oil painting from Marge Yaros of Anaheim, CA. Besides painting pictures for my home, portraits were often the subject for my classes. As a member of the Art Associations of both the communities of Orange and Placentia in California, I have participated in art exhibits. I was honored when asked to exhibit my work within the Information Services facility in Anaheim, a division of Carter Hawley Hale Stores, Inc. where I was employed as a computer operator/word processor employee. It has also been my good fortune, over the years, to enjoy commissions for my work.</p>
+</div>
 
 <script type="text/javascript" src="../menu.js"></script>
 </body>
