--- a/drawingsPage/drawings.html
+++ b/drawingsPage/drawings.html
@@ -9,7 +9,7 @@
 
 <!--References-->
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Mada" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="drawings.css">
 <link rel="stylesheet" type="text/css" href="../style.css">
@@ -51,7 +51,7 @@
 
 <!--Filter-->
 <div class="responsive">
-	<div class="img">
+	<div class="panel">
 		<div class="title" style="font-size: 35px">
 			<p>Filter</p>
 		</div>
@@ -67,7 +67,7 @@
 <!--DRAWINGS-->
 <div class="oil all">
 	<div class="responsive">
-		<div class="img">
+		<div class="panel">
 			<div class="title">
 				<p>Kitty in Trouble</p>
 			</div>
@@ -83,7 +83,7 @@
 </div>
 <div class="oil all">
 	<div class="responsive">
-		<div class="img">
+		<div class="panel">
 			<div class="title">
 				<p>Romeo and Juliet</p>
 			</div>
@@ -99,7 +99,7 @@
 </div>
 <div class="pencil all">
 	<div class="responsive">
-		<div class="img">
+		<div class="panel">
 			<div class="title">
 				<p>A Good Lesson</p>
 			</div>
