Changed 'drawings' to 'gallery'

--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Drawings</title>
+<title>Contact</title>
 
 <!--Makes the website responsive on mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<li><a href="../index.html">Home</a></li>
-	<li><a href="../drawingsPage/drawings.html">Drawings</a></li>
+	<li><a href="../galleryPage/gallery.html">Gallery</a></li>
 	<li><a href="../aboutPage/about.html">About</a></li>
 	<li><a class="active" href="#">Contact</a></li>
 	<li class="menu">
