--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Drawings</title>
+<title>Gallery</title>
 
 <!--Makes the website responsive on mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="drawings.css">
+<link rel="stylesheet" type="text/css" href="gallery.css">
 <link rel="stylesheet" type="text/css" href="../style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="drawings.js"></script>
+<script type="text/javascript" src="gallery.js"></script>
 
 </head>
 <body>
@@ -40,7 +40,7 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<li><a href="../index.html">Home</a></li>
-	<li><a class="active" href="#">Drawings</a></li>
+	<li><a class="active" href="#">Gallery</a></li>
 	<li><a href="../aboutPage/about.html">About</a></li>
 	<li><a href="../contactPage/contact.html">Contact</a></li>
 	<li class="menu">
@@ -71,8 +71,8 @@
 			<div class="title">
 				<p>Kitty in Trouble</p>
 			</div>
-			<a onclick="openViewer('../slideshow/slide5.jpg')">
-				<img src="thumbnails/kitty.jpg" alt="Kitty" width="230" height="230">
+			<a title="Click to view" onclick="openViewer('pictures/kittyInTrouble.jpg')">
+				<img src="thumbnails/kittyInTrouble_t.jpg" alt="Kitty in Trouble" width="230" height="230">
 			</a>
 			<div class="description">
 				<p>Oil</p>
@@ -87,8 +87,8 @@
 			<div class="title">
 				<p>Romeo and Juliet</p>
 			</div>
-			<a onclick="openViewer('../slideshow/slide2.jpg')">
-				<img src="thumbnails/dancers.jpg" alt="Kitty" width="230" height="230">
+			<a title="Click to view" onclick="openViewer('pictures/romeoAndJuliet.jpg')">
+				<img src="thumbnails/romeoAndJuliet_t.jpg" alt="Romeo and Juliet" width="230" height="230">
 			</a>
 			<div class="description">
 				<p>Oil</p>
@@ -103,8 +103,8 @@
 			<div class="title">
 				<p>A Good Lesson</p>
 			</div>
-			<a onclick="openViewer('../slideshow/slide6.jpg')">
-				<img src="thumbnails/lesson.jpg" alt="Kitty" width="230" height="230">
+			<a title="Click to view" onclick="openViewer('pictures/aGoodLesson.jpg')">
+				<img src="thumbnails/aGoodLesson_t.jpg" alt="A Good Lesson" width="230" height="230">
 			</a>
 			<div class="description">
 				<p>Pencil</p>
