--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<li><a class="active" href="#">Home</a></li>
-	<li><a href="drawingsPage/drawings.html">Drawings</a></li>
+	<li><a href="galleryPage/gallery.html">Gallery</a></li>
 	<li><a href="aboutPage/about.html">About</a></li>
 	<li><a href="contactPage/contact.html">Contact</a></li>
 	<li class="menu">
