--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Drawings</title>
+<title>About</title>
 
 <!--Makes the website responsive on mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,7 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<li><a href="../index.html">Home</a></li>
-	<li><a href="../drawingsPage/drawings.html">Drawings</a></li>
+	<li><a href="../galleryPage/gallery.html">Gallery</a></li>
 	<li><a class="active" href="#">About</a></li>
 	<li><a href="../contactPage/contact.html">Contact</a></li>
 	<li class="menu">
