--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Gerry's Fine Art</title>
+<title>Gerry Minor's Fine Art</title>
 
 <!--Makes the website responsive on mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
 
 <!--Name of Website (clickable)-->
 <a href="#" style="text-decoration: none;">
-	<h1 class="webname">Gerry's Fine Art</h1>
+	<h1 class="webname">Gerry Minor's Fine Art</h1>
 </a>
 
 <!--Navigation Bar-->
