--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -18,7 +18,7 @@
 
 <!--Name of Website (clickable)-->
 <a href="../index.html" style="text-decoration: none;">
-	<h1 class="webname">Gerry's Fine Art</h1>
+	<h1 class="webname">Gerry Minor's Fine Art</h1>
 </a>
 
 <!--Navigation Bar-->
