--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -34,7 +34,7 @@
 <div id="pageBody">
 <!--Name of Website (clickable)-->
 <a href="../index.html" style="text-decoration: none;">
-	<h1 class="webname">Gerry's Fine Art</h1>
+	<h1 class="webname">Gerry Minor's Fine Art</h1>
 </a>
 
 <!--Navigation Bar-->
