Added two new pictures

--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -113,6 +113,38 @@
 		</div>
 	</div>
 </div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Constitution</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/constitution.jpg')">
+				<img src="thumbnails/constitution_t.jpg" alt="Constitution" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>Xcm &times; Ycm</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Happy Feet</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/happyFeet.jpg')">
+				<img src="thumbnails/happyFeet_t.jpg" alt="Happy Feet" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>Xcm &times; Ycm</p>
+			</div>
+		</div>
+	</div>
+</div>
 <!--END DRAWINGS-->
 
 </div>
