--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -76,7 +76,7 @@
 			</a>
 			<div class="description">
 				<p>Oil</p>
-				<p>Xcm &times; Ycm</p>
+				<p>16" &times; 20"</p>
 			</div>
 		</div>
 	</div>
@@ -92,7 +92,7 @@
 			</a>
 			<div class="description">
 				<p>Oil</p>
-				<p>Xcm &times; Ycm</p>
+				<p>18" &times; 24"</p>
 			</div>
 		</div>
 	</div>
@@ -108,7 +108,7 @@
 			</a>
 			<div class="description">
 				<p>Pencil</p>
-				<p>Xcm &times; Ycm</p>
+				<p>10½" &times; 13½"</p>
 			</div>
 		</div>
 	</div>
@@ -124,7 +124,7 @@
 			</a>
 			<div class="description">
 				<p>Oil</p>
-				<p>Xcm &times; Ycm</p>
+				<p>22" &times; 28"</p>
 			</div>
 		</div>
 	</div>
@@ -140,7 +140,7 @@
 			</a>
 			<div class="description">
 				<p>Oil</p>
-				<p>Xcm &times; Ycm</p>
+				<p>18" &times; 24"</p>
 			</div>
 		</div>
 	</div>
