Added more pictures

--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -145,6 +145,86 @@
 		</div>
 	</div>
 </div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Meet My Main Squeeze</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/meetMyMainSqueeze.jpg')">
+				<img src="thumbnails/meetMyMainSqueeze_t.jpg" alt="Meet My Main Squeeze" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>18" &times; 24"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="pen all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Myrick & Estelle House</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/myrickEstelleHouse.jpg')">
+				<img src="thumbnails/myrickEstelleHouse_t.jpg" alt="Myrick and Estelle House" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Pen</p>
+				<p>17" &times; 12"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="pen all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Keen Home</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/keenHome.jpg')">
+				<img src="thumbnails/keenHome_t.jpg" alt="Keen Home" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Pen</p>
+				<p>20" &times; 14"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="pen all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Cassem Home</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/cassemHome.jpg')">
+				<img src="thumbnails/cassemHome_t.jpg" alt="Cassem Home" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Pen</p>
+				<p>20" &times; 14"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Oregon Lake</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/oregonLake.jpg')">
+				<img src="thumbnails/oregonLake_t.jpg" alt="Oregon Lake" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>30" &times; 40"</p>
+			</div>
+		</div>
+	</div>
+</div>
 <!--END DRAWINGS-->
 
 </div>
