--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -10,8 +10,8 @@
 <!--References-->
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="contact.css">
 
 </head>
 <body>
@@ -33,6 +33,15 @@
 	</li>
 </ul>
 
+<div class="panel">
+	<h3>Send me an email</h3>
+	<input id="subject" placeholder="Subject">
+	<br>
+	<textarea id="message" placeholder="Write you message here" rows="10"></textarea>
+	<button id="send" onclick="send()">Send</button>
+</div>
+
 <script type="text/javascript" src="../menu.js"></script>
+<script type="text/javascript" src="contact.js"></script>
 </body>
 </html>
