--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -59,7 +59,7 @@
 		<label><input type="radio" onclick="getType()" name="type" value="all" checked> All</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="oil"> Oil</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="pencil"> Pencil</label><br>
-    	<label><input type="radio" onclick="getType()" name="type" value="penInk"> Pen & Ink</label><br>
+    	<label><input type="radio" onclick="getType()" name="type" value="mixed"> Mixed Media</label><br>
     </div>
 	</div>
 </div>
@@ -161,7 +161,7 @@
 		</div>
 	</div>
 </div>
-<div class="penInk all">
+<div class="mixed all">
 	<div class="responsive">
 		<div class="panel">
 			<div class="title">
@@ -171,13 +171,13 @@
 				<img src="thumbnails/myrickEstelleHouse_t.jpg" alt="Myrick and Estelle House" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Pen & Ink</p>
+				<p>Mixed Media</p>
 				<p>17" &times; 12"</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="penInk all">
+<div class="mixed all">
 	<div class="responsive">
 		<div class="panel">
 			<div class="title">
@@ -187,13 +187,13 @@
 				<img src="thumbnails/keenHome_t.jpg" alt="Keen Home" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Pen & Ink</p>
+				<p>Mixed Media</p>
 				<p>20" &times; 14"</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="penInk all">
+<div class="mixed all">
 	<div class="responsive">
 		<div class="panel">
 			<div class="title">
@@ -203,7 +203,7 @@
 				<img src="thumbnails/cassemHome_t.jpg" alt="Cassem Home" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Pen & Ink</p>
+				<p>Mixed Media</p>
 				<p>20" &times; 14"</p>
 			</div>
 		</div>
@@ -217,6 +217,22 @@
 			</div>
 			<a title="Click to view" onclick="openViewer('pictures/oregonLake.jpg')">
 				<img src="thumbnails/oregonLake_t.jpg" alt="Oregon Lake" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>30" &times; 40"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Justin</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/justin.jpg')">
+				<img src="thumbnails/justin_t.jpg" alt="Justin" width="230" height="230">
 			</a>
 			<div class="description">
 				<p>Oil</p>
