--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -37,7 +37,7 @@
 	<h3>Send me an email</h3>
 	<input id="subject" placeholder="Subject">
 	<br>
-	<textarea id="message" placeholder="Write you message here" rows="10"></textarea>
+	<textarea id="message" placeholder="Write your message here" rows="10"></textarea>
 	<button id="send" onclick="send()">Send</button>
 </div>
 
