--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -59,7 +59,8 @@
 		<label><input type="radio" onclick="getType()" name="type" value="all" checked> All</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="oil"> Oil</label><br>
     	<label><input type="radio" onclick="getType()" name="type" value="pencil"> Pencil</label><br>
-    	<label><input type="radio" onclick="getType()" name="type" value="mixed"> Mixed Media</label><br>
+    	<label><input type="radio" onclick="getType()" name="type" value="penInk"> Pen & Ink</label><br>
+    	<label><input type="radio" onclick="getType()" name="type" value="other"> Other</label><br>
     </div>
 	</div>
 </div>
@@ -161,7 +162,7 @@
 		</div>
 	</div>
 </div>
-<div class="mixed all">
+<div class="penInk all">
 	<div class="responsive">
 		<div class="panel">
 			<div class="title">
@@ -171,13 +172,13 @@
 				<img src="thumbnails/myrickEstelleHouse_t.jpg" alt="Myrick and Estelle House" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Mixed Media</p>
+				<p>Pen & Ink</p>
 				<p>17" &times; 12"</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="mixed all">
+<div class="penInk all">
 	<div class="responsive">
 		<div class="panel">
 			<div class="title">
@@ -187,13 +188,13 @@
 				<img src="thumbnails/keenHome_t.jpg" alt="Keen Home" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Mixed Media</p>
+				<p>Pen & Ink</p>
 				<p>20" &times; 14"</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="mixed all">
+<div class="penInk all">
 	<div class="responsive">
 		<div class="panel">
 			<div class="title">
@@ -203,7 +204,7 @@
 				<img src="thumbnails/cassemHome_t.jpg" alt="Cassem Home" width="230" height="230">
 			</a>
 			<div class="description">
-				<p>Mixed Media</p>
+				<p>Pen & Ink</p>
 				<p>20" &times; 14"</p>
 			</div>
 		</div>
