--- a/galleryPage/gallery.html
+++ b/galleryPage/gallery.html
@@ -242,6 +242,54 @@
 		</div>
 	</div>
 </div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Tyler Reed</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/tylerReed.jpg')">
+				<img src="thumbnails/tylerReed_t.jpg" alt="Tyler Reed" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>30" &times; 40"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Comforting</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/comforting.jpg')">
+				<img src="thumbnails/comforting_t.jpg" alt="Comforting" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>30" &times; 40"</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="oil all">
+	<div class="responsive">
+		<div class="panel">
+			<div class="title">
+				<p>Girl in Flower Garden</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('pictures/girlInFlowerGarden.jpg')">
+				<img src="thumbnails/girlInFlowerGarden_t.jpg" alt="Girl in Flower Garden" width="230" height="230">
+			</a>
+			<div class="description">
+				<p>Oil</p>
+				<p>30" &times; 40"</p>
+			</div>
+		</div>
+	</div>
+</div>
 <!--END DRAWINGS-->
 
 </div>
