--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Gerry Minor's Fine Art</title>
+<title>Gerry Minor's Fine Arts</title>
 
 <!--Makes the website responsive on mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
